k8s/cert-manager/loadbalancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - movies.cheulongsear.dev
    secretName: myapp-tls
  ingressClassName: nginx
  rules:
  - host: movies.cheulongsear.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx     
            port:
              number: 80
      # - path: /nginx
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nginx-service1 
      #       port:
      #         number: 8080
